WebVR: Don't crash when receiving null image from rendering context.

Not sure why/how this happens, but I was seeing this infrequently on  https://with.in/watch/under-neon-lights/

BUG=718501

Review-Url: https://codereview.chromium.org/2862883002
Cr-Commit-Position: refs/heads/master@{#469517}

Former-commit-id: a1215009f69ac267d13b072cc2d4c9cda7155fee